--- a/meiduo_mall/meiduo_mall/templates/user_center_info.html
+++ b/meiduo_mall/meiduo_mall/templates/user_center_info.html
@@ -62,10 +62,10 @@
         <div class="left_menu_con clearfix">
             <h3>用户中心</h3>
             <ul>
-                <li><a href="user_center_info.html" class="active">· 个人信息</a></li>
-                <li><a href="user_center_order.html">· 全部订单</a></li>
-                <li><a href="user_center_site.html">· 收货地址</a></li>
-                <li><a href="user_center_pass.html">· 修改密码</a></li>
+                <li><a href="{{ url('users:info') }}" class="active">· 个人信息</a></li>
+                <li><a href="../static/user_center_order.html">· 全部订单</a></li>
+                <li><a href="{{ url('users:address') }}">· 收货地址</a></li>
+                <li><a href="{{ url('users:pass') }}">· 修改密码</a></li>
             </ul>
         </div>
         <div class="right_content clearfix">
