--- a/meiduo_mall/meiduo_mall/templates/user_center_site.html
+++ b/meiduo_mall/meiduo_mall/templates/user_center_site.html
@@ -6,6 +6,7 @@
     <title>美多商城-用户中心</title>
     <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
@@ -16,17 +17,20 @@
         <div class="header">
             <div class="welcome fl">欢迎来到美多商城!</div>
             <div class="fr">
-                <div class="login_info fl">
-                    欢迎您：<em>张 山</em>
+                <div v-if="username" class="login_btn fl">
+                    欢迎您：<em>[[ username ]]</em>
+                    <span>|</span>
+                    <!--修改如下代码,使其能够退出登录-->
+                    <a href="{{ url('users:logout') }}">退出</a>
                 </div>
-                <div class="login_btn fl">
+               <div v-else class="login_btn fl">
                     <a href="login.html">登录</a>
                     <span>|</span>
                     <a href="register.html">注册</a>
                 </div>
                 <div class="user_link fl">
                     <span>|</span>
-                    <a href="user_center_info.html">用户中心</a>
+                    <a href="{{ url('users:info') }}">用户中心</a>
                     <span>|</span>
                     <a href="cart.html">我的购物车</a>
                     <span>|</span>
@@ -56,54 +60,42 @@
         <div class="left_menu_con clearfix">
             <h3>用户中心</h3>
             <ul>
-                <li><a href="user_center_info.html">· 个人信息</a></li>
-                <li><a href="user_center_order.html">· 全部订单</a></li>
-                <li><a href="user_center_site.html" class="active">· 收货地址</a></li>
-                <li><a href="user_center_pass.html">· 修改密码</a></li>
+                <li><a href="{{ url('users:info') }}">· 个人信息</a></li>
+                <li><a href="../static/user_center_order.html">· 全部订单</a></li>
+                <li><a href="{{ url('users:address') }}" class="active">· 收货地址</a></li>
+                <li><a href="{{ url('users:pass') }}">· 修改密码</a></li>
             </ul>
         </div>
         <div class="right_content clearfix">
             <div class="site_top_con">
-                <a href="javascript:;">新增收货地址</a>
-                <span>你已创建了<b>2</b>个收货地址，最多可创建<b>20</b>个</span>
+                <a @click="show_add_site">新增收货地址</a>
+                <span>你已创建了<b>[[ addresses.length ]]</b>个收货地址，最多可创建<b>20</b>个</span>
             </div>
-            <div class="site_con">
+            <div class="site_con" v-for="(address, index) in addresses">
                 <div class="site_title">
-                    <h3>张大山A 北京</h3>
-                    <a href="javascript:;" class="edit_icon"></a>
-                    <em>默认地址</em>
-                    <span class="del_site">×</span>
+                    <div v-if="edit_title_index===index">
+                        <input v-model="input_title" type="text" name="">
+                        <input @click="save_title(index)" type="button" name="" value="保 存">
+                        <input @click="cancel_title(index)" type="reset" name="" value="取 消">
+                    </div>
+                    <div>
+                        <h3>[[ address.title ]]</h3>
+                        <a @click="show_edit_title(index)" class="edit_title"></a>
+                    </div>
+                    <em v-if="address.id===default_address_id">默认地址</em>
+                    <span @click="delete_address(index)">×</span>
                 </div>
                 <ul class="site_list">
-                    <li><span>收货人：</span><b>张大山</b></li>
-                    <li><span>所在地区：</span><b>北京昌平区六环内</b></li>
-                    <li><span>地址：</span><b>昌平区天通苑北二区36栋</b></li>
-                    <li><span>手机：</span><b>188****0001</b></li>
-                    <li><span>固定电话：</span><b>78912345</b></li>
-                    <li><span>电子邮箱：</span><b>dashan@126.com</b></li>
+                    <li><span>收货人：</span><b>[[ address.receiver ]]</b></li>
+                    <li><span>所在地区：</span><b>[[ address.province ]] [[address.city]] [[ address.district ]]</b></li>
+                    <li><span>地址：</span><b>[[ address.place ]]</b></li>
+                    <li><span>手机：</span><b>[[ address.mobile ]]</b></li>
+                    <li><span>固定电话：</span><b>[[ address.tel ]]</b></li>
+                    <li><span>电子邮箱：</span><b>[[ address.email ]]</b></li>
                 </ul>
                 <div class="down_btn">
-                    <a href="javascript:;" class="edit_icon">编辑</a>
-                </div>
-            </div>
-
-            <div class="site_con">
-                <div class="site_title">
-                    <h3>张大山 北京</h3>
-                    <a href="javascript:;" class="edit_icon"></a>
-                    <span class="del_site">×</span>
-                </div>
-                <ul class="site_list">
-                    <li><span>收货人：</span><b>张大山</b></li>
-                    <li><span>所在地区：</span><b>北京昌平区六环内</b></li>
-                    <li><span>地址：</span><b>昌平区天通苑北二区36栋</b></li>
-                    <li><span>手机：</span><b>188****003</b></li>
-                    <li><span>固定电话：</span><b>78912345</b></li>
-                    <li><span>电子邮箱：</span><b>dashan@126.com</b></li>
-                </ul>
-                <div class="down_btn">
-                    <a href="javascript:;" class="set_default">设为默认</a>
-                    <a href="javascript:;" class="edit_icon">编辑</a>
+                    <a v-if="address.id!=default_address_id" @click="set_default(index)">设为默认</a>
+                    <a @click="show_edit_site(index)" class="edit_icon">编辑</a>
                 </div>
             </div>
         </div>
@@ -122,17 +114,18 @@
         <p>电话：010-****888 京ICP备*******8号</p>
     </div>
 
-    <div class="pop_con">
+    <div class="pop_con" v-show="is_show_edit">
         <div class="site_con site_pop">
             <div class="site_pop_title">
-                <h3>新增收货地址</h3>
-                <a href="javascript:;">×</a>
+                <h3 v-if="editing_address_index">编辑收货地址</h3>
+                <h3 v-else>新增收货地址</h3>
+                <a @click="is_show_edit=false">×</a>
             </div>
             <form>
                 <div class="form_group">
-                    <label>收货人：</label>
-                    <input type="text" name="receiver" class="receiver">
-                    <span class="receiver_error">请填写收货人</span>
+                    <label>*收货人：</label>
+                    <input v-model="form_address.receiver" @blur="check_receiver" type="text" class="receiver">
+                    <span v-show="error_receiver" class="receiver_error">请填写收件人</span>
                 </div>
                 <div class="form_group">
                     <label>*所在地区：</label>
@@ -147,27 +140,27 @@
                     </select>
                 </div>
                 <div class="form_group">
-                    <label>详细地址：</label>
-                    <input type="text" name="place" class="place">
-                    <span class="place_error">请填写详细地址</span>
+                    <label>*详细地址：</label>
+                    <input v-model="form_address.place" @blur="check_place" type="text" class="place">
+                    <span v-show="error_place" class="place_error">请填写地址信息</span>
                 </div>
                 <div class="form_group">
-                    <label>手机：</label>
-                    <input type="text" name="mobile" class="mobile">
-                    <span class="mobile_error">手机号有误</span>
+                    <label>*手机：</label>
+                    <input v-model="form_address.mobile" @blur="check_mobile" type="text" class="mobile">
+                    <span v-show="error_mobile" class="mobile_error">手机信息有误</span>
                 </div>
                 <div class="form_group">
                     <label>固定电话：</label>
-                    <input type="text" name="tel" class="tel">
-                    <span class="tel_error">固定电话有误</span>
+                    <input v-model="form_address.tel" @blur="check_tel" type="text" class="tel">
+                    <span v-show="error_tel" class="tel_error">固定电话有误</span>
                 </div>
                 <div class="form_group">
                     <label>邮箱：</label>
-                    <input type="text" name="email" class="email">
-                    <span class="email_error">邮箱格式有误</span>
+                    <input v-model="form_address.email" @blur="check_email" type="text" class="email">
+                    <span v-show="error_email" class="email_error">邮箱信息有误</span>
                 </div>
-                <input type="button" name="" value="新 增" class="info_submit">
-                <input type="reset" name="" value="取 消" class="info_submit info_reset">
+                <input @click="save_address" type="button" name="" value="保 存" class="info_submit">
+                <input @click="is_show_edit=false" type="reset" name="" value="取 消" class="info_submit info_reset">
             </form>
         </div>
         <div class="mask"></div>
@@ -186,6 +179,12 @@
         <div class="mask"></div>
     </div>
 </div>
+<script type="text/javascript">
+    let addresses = {{ addresses | safe }};
+    let default_address_id = {{ default_address_id }};
+</script>
+<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/base.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/user_center_site.js') }}"></script>
 </body>
 </html>
