--- a/meiduo_mall/meiduo_mall/templates/list.html
+++ b/meiduo_mall/meiduo_mall/templates/list.html
@@ -307,23 +307,16 @@
             <ul class="goods_type_list clearfix">
                 {% for sku in page_skus %}
                     <li>
-                        <a href="detail.html">
+                        <a href="{{ url('goods:detail', args=(sku.id,)) }}">
                             <img src="{{ sku.default_image_url }}">
                         </a>
                         <h4>
-                            <a href="detail.html">
-                                {{ sku.name }}
-                            </a>
+                            <a href="{{ url('goods:detail', args=(sku.id,)) }}">{{ sku.name }}</a>
                         </h4>
                         <div class="operate">
-                    <span class="price">
-                        ￥{{ sku.price }}
-                    </span>
-                            <span class="unit">
-                        台
-                    </span>
-                            <a href="#" class="add_goods" title="加入购物车">
-                            </a>
+                            <span class="price">￥{{ sku.price }}</span>
+                            <span class="unit">台</span>
+                            <a href="#" class="add_goods" title="加入购物车"></a>
                         </div>
                     </li>
                 {% endfor %}
